[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/title.png" type="Texture" id=1]
[ext_resource path="res://Assets/graphics/kenney2/particle.png" type="Texture" id=2]
[ext_resource path="res://Objects/GUI/Button1/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MainMenu/Clouds/Clouds.tscn" type="PackedScene" id=5]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.174157, 0.870786, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.941678, 0.996097, 0.99707, 0.901961, 0.930556, 1, 0.99471, 0.901961, 1, 1, 1, 0 )

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9, 1.3, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, -2, 1, 1, -2, 1 ),
"update": 0,
"values": [ 90.0, 80.0, 90.0, 90.0, 80.0, 90.0 ]
}

[sub_resource type="Animation" id=2]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4 ),
"transitions": PoolRealArray( 1, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.02, 1.02 ), Vector2( 1, 1 ), Vector2( 1.02, 1.02 ), Vector2( 1, 1 ), Vector2( 1.02, 1.02 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4 ),
"transitions": PoolRealArray( 1, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.568627, 0.866667, 0.890196, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 250, 200 )
amount = 10
lifetime = 6.0
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 500, 300 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.3
scale_amount = 0.15
scale_amount_random = 0.1
color_ramp = SubResource( 3 )

[node name="Clouds" parent="." instance=ExtResource( 5 )]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 250, 200 )
amount = 15
lifetime = 6.0
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 500, 300 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.3
scale_amount = 0.2
scale_amount_random = 0.1
color_ramp = SubResource( 3 )

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.0
margin_top = -180.839
margin_right = 301.0
margin_bottom = -101.839
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -31.0
margin_right = 120.0
margin_bottom = 239.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="VBoxContainer" instance=ExtResource( 3 )]
text = "PLAY"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Play"]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="About" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 100.0
margin_bottom = 170.0
text = "ABOUT"

[node name="Exit" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 200.0
margin_bottom = 270.0
text = "EXIT"
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
